🎨 Fix favicon - optimize size and remove black background
- Created optimized favicon sizes (16x16, 32x32, 192x192)
- Using pizza_slice_icon.png instead of large logo
- Added multiple favicon formats for better browser support
- Added apple-touch-icon for iOS devices
- Added theme-color meta tag
- Favicon now displays clearly in browser tabs

--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/attached_assets/generated_images/Pizza_logo_icon_orange_58b11467.png">
+    
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="/favicon-192x192.png">
+    
     <title>Slice of Heaven - Premium Pizza</title>
     <meta name="description" content="Slice of Heaven - райська піца. Taste the Sky. One Slice at a Time.">
+    <meta name="theme-color" content="#ea580c">
   </head>
   <body>
     <div id="root"></div>
